# DermaScan-Endpoint

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  prediction.py  pyproject.toml
.github/workflows/: google-cloudrun-docker.yml
