[project]
name = "capstone-cc-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10"
dependencies = [
    "fastapi>=0.115.5",
    "fastapi-cli>=0.0.5",
    "granian>=1.6.3",
    "python-multipart>=0.0.17",
    "gdown>=5.2.0",
    "tensorflow==2.15.*",
    "pillow>=11.0.0",
    "numpy==1.*",
]

[dependency-groups]
dev = [
    "ruff>=0.8.2",
]
